--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -15,3 +15,6 @@ models:
       +materialized: table
       +file_format: parquet
       +schema: labels
+    stg:
+      +materialized: view
+      +schema: stg
