--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -15,6 +15,6 @@ models:
       +materialized: table
       +file_format: parquet
       +schema: labels
-    stg:
+    index:
       +materialized: view
       +schema: index
