--- a/defs/properties/nft_whale.yml
+++ b/defs/properties/nft_whale.yml
@@ -1,6 +1,6 @@
 name: NFT Whale
 description: ""
-source_table: nft_whale_property
+source_table: nft_whale_label
 user_field_name: address
 property_field_name: label
 property_descriptions:
