--- a/defs/properties/nft_collector.yml
+++ b/defs/properties/nft_collector.yml
@@ -1,11 +1,11 @@
 name: NFT Collector
-description: ""
+description: Wallets that have mint or trade NFT
 source_table: nft_collector_label
 user_field_name: address
 property_field_name: label
 property_descriptions:
   - name: OpenSea Trader
-    description: Wallets that have transactions on OpenSea.
+    description: Wallets that have transactions on OpenSea
   - name: Diversified NFT Holder
     description: Wallets that are currently holding at least 5 collections
   - name: NFT Blue Chip Holder
