--- a/defs/properties/smart_money.yml
+++ b/defs/properties/smart_money.yml
@@ -1,13 +1,13 @@
 name: Smart Money
-description: ""
+description: Various types of wallets make savvy investment decisions and are one step ahead in investment
 source_table: smart_money_label
 user_field_name: address
 property_field_name: label
 property_descriptions:
   - name: Smart NFT Trader
-    description: The top 100 addresses in terms of realized profits from NFT sales.
+    description: The top 100 addresses in terms of realized profits from NFT sales
   - name: Smart NFT Holder
-    description: The top 100 addresses in terms of estimated profits of their current NFT portfolio.
+    description: The top 100 addresses in terms of estimated profits of their current NFT portfolio
   - name: Smart NFT Minter
   - name: Smart NFT Early Adopter
   - name: Smart NFT Sweeper
