feat: add phishing & hackers property and fix created_by

--- a/defs/events/metamask_swap.yml
+++ b/defs/events/metamask_swap.yml
@@ -8,3 +8,4 @@ filter_fields:
   - field_name: router
     is_categorical: true
   - field_name: token
+created_by: '0x10B317842702b7B04B93dB25a00b258388ebbd73'
