--- a/defs/properties/nft_collector.yml
+++ b/defs/properties/nft_collector.yml
@@ -18,4 +18,4 @@ property_descriptions:
     description: Top 1% in the number of NFT transactions
   - name: Legendary NFT Trader
     description: Top 0.1% in the number of NFT transactions
-
+created_by: '0x1025b51aC05C90E9c7BabC4dAee0a1658e0E6917'
