--- a/defs/properties/nft_whale.yml
+++ b/defs/properties/nft_whale.yml
@@ -6,4 +6,4 @@ property_field_name: label
 property_descriptions:
   - name: NFT Millionaire
     description: Wallets with $1,000,000+ NFT holding value
-
+created_by: '0x1025b51aC05C90E9c7BabC4dAee0a1658e0E6917'
