--- a/defs/properties/smart_money.yml
+++ b/defs/properties/smart_money.yml
@@ -12,3 +12,4 @@ property_descriptions:
   - name: Smart NFT Early Adopter
   - name: Smart NFT Sweeper
   - name: Airdrop Pro
+created_by: '0x1025b51aC05C90E9c7BabC4dAee0a1658e0E6917'
