--- a/defs/properties/ens_name.yml
+++ b/defs/properties/ens_name.yml
@@ -3,3 +3,4 @@ description: the ENS name owned by the user
 source_table: ens_name_label
 user_field_name: address
 property_field_name: label
+created_by: '0x4ab190bc3c60678705cd819a37e10af7417ac89b'
